--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "dev": "nodemon src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["express", "worldbank", "api", "statistik", "REST"],
+  "keywords": [
+    "express",
+    "worldbank",
+    "api",
+    "statistik",
+    "REST"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
